Changes done in Customer_event.js,Payable_event.js,Payable_methode.js, color_method.js,Customer(Index.cshtml),Payable(Pay.cshtml),PayableInfo.cs,PayableRepo.cs

--- a/MyLeoRetailer/Views/PostLogin/Master/Color/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Color/Index.cshtml
@@ -9,6 +9,39 @@
 <script src="~/Scripts/Modules/Color/color_methods.js"></script>
 <script src="~/Scripts/Modules/Color/color_validation.js"></script>
 
+@*<style>
+    .colorpicker{
+            min-width: 214px;
+    min-height: 200px;
+    }
+
+    .colorpicker-saturation{
+            width: 170px;
+    height: 190px;
+    }
+
+  
+    .colorpicker-hue , .colorpicker-alpha{
+        width: 25px;
+    height: 190px;
+    background-size: 25px 190px;
+    
+    }
+   
+    .colorpicker-hue i {
+       margin-top:0px;
+       margin-bottom:0px;
+    }
+    
+    .colorpicker-hue i{
+        top:190px;
+    }
+
+    .colorpicker-saturation{
+            background-size: 170px 190px;
+    }
+</style>*@
+
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
     <li><a href="#">Home</a></li>
