--- a/MyLeoRetailer/Views/PostLogin/Master/ProductDispatch/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/ProductDispatch/Index.cshtml
@@ -72,11 +72,11 @@
                             <div class="block">
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Dispatch Date</span>
-                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="mm-dd-yyyy">
+                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="MM-dd-yyyy">
                                         <input type="text" class="form-control datepicker" name="product_Dispatch.Dispatch_Date" id="txtDispatch_Date" placeholder="Enter Dispatch Date." />
                                         <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                                     </div>
-                                </div>
+                                </div>                               
 
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Dispatch Quantity</span>
@@ -131,7 +131,7 @@
 
                                                 <td>
                                                     @item.Quantity
-                                                    <input type='hidden' class='form-control input-sm quantity' name='List_product_Dispatch[0].Quantity' value="@item.Quantity" id="textQuantitya_0">
+                                                    @*<input type='hidden' class='form-control input-sm quantity' name='List_product_Dispatch[0].Quantity' value="@item.Quantity" id="textQuantitya_0">*@
                                                 </td>
 
                                                 <td>
