changes done in Alteration index and Sales_Return Index page

--- a/MyLeoRetailer/Views/PostLogin/Master/Alteration/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Alteration/Index.cshtml
@@ -85,7 +85,7 @@
 
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Address</span>
-                            <input type="text" class="form-control" placeholder="Enter product name." name="Alteration.Product_Name" value="@Model.Alteration.Product_Name" maxlength="50"/>
+                            <input type="text" class="form-control" placeholder="Enter address." name="Alteration.Product_Name" value="@Model.Alteration.Product_Name" maxlength="50"/>
                         </div>
 
                         <div class="form-group">
