--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
@@ -68,7 +68,7 @@
                                 </div>*@
 
                                 <div class="form-group">
-                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Purchase Retirn Date.</span>
+                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Purchase Return Date.</span>
                                     @if (Model.PurchaseReturn.Purchase_Return_Date != DateTime.MinValue)
                                     {
                                         <div class="input-group date" id="dp-2" data-date="" data-date-format="MM-dd-yyyy">
