--- a/MyLeoRetailer/Views/PostLogin/SalesReturn/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesReturn/Index.cshtml
@@ -251,17 +251,17 @@
                                         <th style="width:100px;">Barcode No.</th>
                                         <th style="width:100px;">SKU No</th>
                                         <th style="width:70px;">Article No</th>
-                                        <th style="width:70px;">Colour</th>
                                         <th style="width:100px;">Brand</th>
                                         <th style="width:100px;">Category</th>
                                         <th style="width:100px;">Sub Category</th>
                                         <th style="width:100px;">Size</th>
-                                        <th style="width:60px;">MRP</th>
+                                        <th style="width:70px;">Colour</th>
                                         <th style="width:60px;">Quantity</th>
+                                        <th style="width:60px;">MRP</th>
                                         <th style="width:60px;">Discount Percentage</th>
                                         <th style="width:60px;">Discount Amount</th>
                                         <th style="width:60px;">Amount</th>
-                                        <th style="width:100px;">Salesman Name</th>
+                                        <th style="width:100px;">Return Reason</th>
                                         <th style="width:100px;">Actions</th>
                                     </tr>
                                 </thead>
