--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseInvoice/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseInvoice/Index.cshtml
@@ -313,7 +313,7 @@
                                         <td>
                                             <div class="form-group auto-complete">
                                                 <div class="input-group">
-                                                    <input type="text" class="form-control invoice-filter autocomplete-text" id="textSKU_No_0" placeholder="Enter SKU to search" value="" data-table="Product_SKU_Mapping" data-col="Quantity,SKU_Code" data-headernames="SKU Code" data-param="hdnPurchase_Order_Id_0" data-field="Purchase_Order_Id" />
+                                                    <input type="text" class="form-control invoice-filter autocomplete-text" id="textSKU_No_0" placeholder="Enter SKU to search" value="" data-table="Product_SKU_Mapping" data-col="Product_SKU_Map_Id,SKU_Code" data-headernames="SKU Code" data-param="hdnPurchase_Order_Id_0" data-field="Purchase_Order_Id" />
                                                     <span class="input-group-addon"><a href="#" class="text-muted div_SKU" id="hrefDealer" role="button"><i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
                                                     <input type="hidden" id="hdnQuantity_0" value="" class="auto-complete-value" />
                                                     <input type="hidden" id="hdnSKU_No_0" value="" name="PurchaseInvoice.PurchaseInvoices[0].SKU_Code" class="auto-complete-label" onchange="javascript: Get_Purchase_Invoice_Items_By_SKU_Code(0);" />
