--- a/MyLeoRetailer/Views/PostLogin/Master/Receivable/Pay.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Receivable/Pay.cshtml
@@ -90,17 +90,45 @@
 
             <div class="row" style="border-bottom:1px solid #DDD; border-top:1px solid #DDD">
                 <div class="block">
-                    <div class="col-md-3">
+                    <div class="col-md-2">
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Total Amount</span>
                             <input type="text" class="form-control input-sm" name="Receivable.Net_Amount" id="txtNet_Amount" value="@(Model.Receivable.Net_Amount == 0 ? "" : Model.Receivable.Net_Amount.ToString())" placeholder="Total Amount" maxlength="10" />
                         </div>
                     </div>
 
-                    <div class="col-md-3">
+                    <div id="divCreditcardno" class="col-md-2">
+                        <div class="form-group">
+                            <span class="label label-primary label-form" style="margin-bottom: 1px;">Balance Amount</span>
+                            <input type="text" class="form-control input-sm" name="Receivable.Balance_Amount" id="txtBalance_Amount" value="@(Model.Receivable.Balance_Amount == 0 ? "" : Model.Receivable.Balance_Amount.ToString())" placeholder="Balance Amount" maxlength="10" />
+                        </div>
+                    </div>
+
+                    <div class="col-md-2">
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Cash Amount</span>
                             <input type="text" class="form-control input-sm" name="Receivable.Cash_Amount" id="txtCash_amount" @*onfocusout="javascript: Get_Balance_Amount_Using_Cash_Amount(this);"*@ value="@(Model.Receivable.Cash_Amount == 0 ? "" : Model.Receivable.Cash_Amount.ToString())" placeholder="Cash Amount" maxlength="10" />
+                        </div>
+                    </div>
+
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <span class="label label-primary label-form" style="margin-bottom: 1px;">Discount%</span>
+                            <input type="text" class="form-control input-sm" name="Receivable.Discount_Percentage" id="txtDiscount_Percentage" onblur="javascript: CalculateDiscount();" value="@(Model.Receivable.Discount_Percentage == 0 ? "" : Model.Receivable.Discount_Percentage.ToString())" placeholder="Discount" />
+                        </div>
+                    </div>
+
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <span class="label label-primary label-form" style="margin-bottom: 1px;">Discount Amount</span>
+                            <input type="text" class="form-control input-sm" name="Receivable.Discount_Amount" id="txtDiscount_Amount" @*onfocusout="javascript: Get_Balance_Amount_Using_Cash_Amount(this);"*@ value="@(Model.Receivable.Discount_Amount == 0 ? "" : Model.Receivable.Discount_Amount.ToString())" placeholder="Discount Amount"/>
+                        </div>
+                    </div>
+
+                    <div id="divDebitcardno" class="col-md-2">
+                        <div class="form-group">
+                            <span class="label label-primary label-form" style="margin-bottom: 1px;">Final Amount </span>
+                            <input type="text" class="form-control input-sm" name="Receivable.Paid_Amount" id="txtPaid_Amount" @*onclick="javascript: CalculateDiscount();"*@ @*onchange="javascript: BalanceAmount();"*@ value="@(Model.Receivable.Paid_Amount == 0 ? "" : Model.Receivable.Paid_Amount.ToString())" placeholder="Final Amount" maxlength="10" />
                         </div>
                     </div>
 
@@ -268,24 +296,12 @@
 
             </div>
 
-            <div class="row" style="border-top: 1px solid #DDD; border-bottom: 1px solid #DDD;">
+            @*<div class="row" style="border-top: 1px solid #DDD; border-bottom: 1px solid #DDD;">
 
                 <div class="block">
-                    <div id="divDebitcardno" class="col-md-3">
-                        <div class="form-group">
-                            <span class="label label-primary label-form" style="margin-bottom: 1px;">Paid Amount </span>
-                            <input type="text" class="form-control input-sm" name="Receivable.Paid_Amount" id="txtPaid_Amount" @*onclick="javascript: CalculateDiscount();"*@ @*onchange="javascript: BalanceAmount();"*@ value="@(Model.Receivable.Paid_Amount == 0 ? "" : Model.Receivable.Paid_Amount.ToString())" placeholder="Paid Amount" maxlength="10" />
-                        </div>
-                    </div>
-
-                    <div id="divCreditcardno" class="col-md-3">
-                        <div class="form-group">
-                            <span class="label label-primary label-form" style="margin-bottom: 1px;">Balance Amount</span>
-                            <input type="text" class="form-control input-sm" name="Receivable.Balance_Amount" id="txtBalance_Amount" value="@(Model.Receivable.Balance_Amount == 0 ? "" : Model.Receivable.Balance_Amount.ToString())" placeholder="Balance Amount" maxlength="10" />
-                        </div>
-                    </div>
+                   
                 </div>
-            </div>
+            </div>*@
 
             <div class="row">
                 <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02);padding-left: 30px; padding-right:0px; padding-top: 20px; padding-bottom: 20px; margin-bottom: 15px; border-top: 1px solid #DDD; border-bottom: 1px solid #DDD;">
@@ -319,6 +335,8 @@
                                         <th>Card amount</th>
                                         <th>Gift voucher no</th>
                                         <th>Gift voucher amount</th>
+                                        <th>Discount%</th>
+                                        <th>Discount amount</th>
 
                                     </tr>
                                 </thead>
@@ -485,6 +503,30 @@
                                                 }
 
                                                 <input type="hidden" id="hdnGift_Voucher_Amount@(itm.Receivable_Item_Id)" name="Receivable.Gift_Voucher_Amount[@(i-1)]" value="@itm.Gift_Voucher_Amount">
+                                            </td>
+                                            <td>
+                                                @if (itm.Discount_Percentage == 0)
+                                                {
+                                                    <span>NA</span>
+                                                }
+                                                else
+                                                {
+                                                    <span> @itm.Discount_Percentage</span>
+                                                }
+
+                                                <input type="hidden" id="hdnDiscount_Percentage@(itm.Receivable_Item_Id)" name="Receivable.Discount_Percentage[@(i-1)]" value="@itm.Discount_Percentage">
+                                            </td>
+                                            <td>
+                                                @if (itm.Discount_Amount == 0)
+                                                {
+                                                    <span>NA</span>
+                                                }
+                                                else
+                                                {
+                                                    <span> @itm.Discount_Amount</span>
+                                                }
+
+                                                <input type="hidden" id="hdnDiscount_Amount@(itm.Receivable_Item_Id)" name="Receivable.Discount_Amount[@(i-1)]" value="@itm.Discount_Amount">
                                             </td>
 
 
