--- a/MyLeoRetailer/Views/PostLogin/Report/Inventory/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Report/Inventory/Search.cshtml
@@ -50,14 +50,11 @@
 
                         <input type="hidden" id="hdnInventoryId" name="Filter.Inventory_Id" value="@Model.Inventory.Inventory_Id" />
 
-                        <div class="col-md-4">
-
-
-
+                        <div class="col-md-2">
                             <div class="form-group auto-complete">
                                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Branch Name.</span>
                                 <div class="input-group">
-                                    <input type="text" class="form-control autocomplete-text" id="textBrand" name="Branch" placeholder="Branch name" value="" data-table="Inventory" data-col="Branch_Id,Branch_Name" data-headernames="Branches" data-param="hdnBranchIDs" data-field="Branch_Id" />
+                                    <input type="text" class="form-control autocomplete-text" id="textBranch" name="Branch" placeholder="Branch name" value="" data-table="Inventory" data-col="Branch_Id,Branch_Name" data-headernames="Branches" data-param="hdnBranchIDs" data-field="Branch_Id" />
                                     <span class="input-group-addon">
                                         <a href="#" class="text-muted" id="hrefDealer1" role="button">
                                             <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i>
@@ -67,13 +64,9 @@
                                     <input type="hidden" id="hdnBranch_Name" value="" name="" class="auto-complete-label" onchange="Set_Branch_Id();" />
                                 </div>
                             </div>
-
-
                         </div>
 
-                        <div class="col-md-4">
-
-
+                        <div class="col-md-3">
                             <div class="form-group auto-complete">
                                 <span class="label label-primary label-form" style="margin-bottom: 1px;">SKU Code.</span>
                                 <div class="input-group">
@@ -83,10 +76,33 @@
                                     <input type="hidden" id="hdnProduct_SKU" value="" name="Filter.Product_SKU" class="auto-complete-label" />
                                 </div>
                             </div>
-
                         </div>
 
-                        <div class="col-md-4" style="text-align: right; padding-top: 25px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
+                        <div class="col-md-2">
+                            <div class="form-group auto-complete">
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">Brand</span>
+                                <div class="input-group">
+                                    <input type="text" class="form-control autocomplete-text" id="textBrand" name="Brand" placeholder="Brand" value="" data-table="Brand" data-col="Brand_Code,Brand_Name" data-headernames="Brands" />
+                                    <span class="input-group-addon"><a href="#" class="text-muted" id="hrefDealer" role="button"><i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                    <input type="hidden" id="hdnBrand_Code" value="" name="Filter.Brand_Code" class="auto-complete-value" />
+                                    <input type="hidden" id="hdnBrand_Name" value="" name="" class="auto-complete-label" onchange=" Set_Brand_Code();" />
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-3">
+                            <div class="form-group auto-complete">
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">Category</span>
+                                <div class="input-group">
+                                    <input type="text" class="form-control autocomplete-text" id="textCategory" name="Category" placeholder="Category" value="" data-table="Category" data-col="Category_Code,Category" data-headernames="Categories" />
+                                    <span class="input-group-addon"><a href="#" class="text-muted" id="hrefDealer" role="button"><i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                    <input type="hidden" id="hdnCategory_Code" value="" name="Filter.Category_Code" class="auto-complete-value" />
+                                    <input type="hidden" id="hdnCategory" value="" name="" class="auto-complete-label" onchange="Set_Category_Code();" />
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-2" style="text-align: right; padding-top: 25px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
 
                             <div class="btn-group">
                                 <button type="button" class="btn btn-success active" value="Search" id="btnSearchInventory">Search</button>
