--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Search.cshtml
@@ -82,7 +82,7 @@
                                 <button role="button" class="btn btn-success active" value="Create" id="btnCreatePurchaseReturn">Create</button>
                                 <button class="btn btn-danger active" disabled value="Edit" id="btnEditPurchaseReturn">View</button>
                                 <button type="button" class="btn btn-info active edit" disabled value="View" id="btnPrintPurchaseReturn">Print</button>
-                                <button role="button" type="button" disabled class="btn btn-info active" value="Update" id="btnUpdatePurchaseReturn" data-toggle="modal" data-target="#div_Parent_Modal_Fade">Update GR No.</button>
+                                <button role="button" type="button" disabled class="btn btn-warning active" value="Update" id="btnUpdatePurchaseReturn" data-toggle="modal" data-target="#div_Parent_Modal_Fade">Update GR No.</button>
                                 
                             </div>
 
