--- a/MyLeoRetailer/Views/Shared/_Menu.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Menu.cshtml
@@ -64,6 +64,7 @@
         <ul class="animated zoomIn">
             <li><a href="/SalesOrder/Report"><span class="fa fa-users"></span> Sales </a></li>
             <li><a href="/Inventory/Search"><span class="fa fa-users"></span> Inventory </a></li>
+            <li><a href="/SalesOrder/SalesSummaryReport"><span class="fa fa-users"></span> Sales Summary Report </a></li>
         </ul>
     </li>
     @*End*@
