Added files for generate barcode screen.

--- a/MyLeoRetailer/Views/Shared/_Menu.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Menu.cshtml
@@ -68,6 +68,10 @@
     </li>
     @*End*@
 
+    <li class="xn-openable">
+        <a href="/Barcode/Barcode"><span class="fa fa-files-o"></span> <span class="xn-text">Generate Barcode</span></a>
+    </li>
+
     <!-- SIGN OUT -->
     <li class="xn-icon-button pull-right">
         <a href="#" class="mb-control" data-box="#mb-signout"><span class="fa fa-sign-out"></span></a>
