--- a/MyLeoRetailer/Views/PostLogin/SalesReturn/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesReturn/Index.cshtml
@@ -271,10 +271,11 @@
                                         <td>
                                             <div class="form-group auto-complete">
                                                 <div class="input-group">
-                                                    <input type="text" class="form-control invoice-filter autocomplete-text" name="SaleReturnItemList[0].Sales_Invoice_No" id="textSales_Invoice_No_0" placeholder="Enter invoice to search" value="" data-table="Sales_Invoice" data-col="Sales_Invoice_Id,Sales_Invoice_No" data-headernames="Sales Invoice">
+                                                    <input type="text" class="form-control invoice-filter autocomplete-text" name="SaleReturnItemList[0].Sales_Invoice_No" id="textSales_Invoice_No_0" placeholder="Enter invoice to search" value="" data-table="Sales_Invoice_table" data-col="Sales_Invoice_Id,Sales_Invoice_No" data-param="hdnCustomer_ID" data-field="Customer_Id" data-headernames="Sales Invoice">
                                                     <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
                                                     <input type="hidden" id="hdnSalesInvoiceID_0" value="" name="SaleReturnItemList[0].Sales_Invoice_Id" class="auto-complete-value" />
                                                     <input type="hidden" id="hdnSalesInvoiceNo_0" value="" name="SaleReturnItemList[0].Sales_Invoice_No" class="auto-complete-label" />
+                                                    @*<input type="hidden" name="SalesReturn.Customer_Id" value="" id="hdnCustomer_ID" />*@
                                                 </div>
                                             </div>
                                         </td>
