--- a/MyLeoRetailer/Views/PostLogin/Master/Product/_ProductPrizing.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Product/_ProductPrizing.cshtml
@@ -14,6 +14,11 @@
     /*.commonProduct {
         overflow-y: auto;
     }*/
+
+    .input-group-addon {
+        background-color: #33414e !important;
+        color: #fff !important;
+    }
 </style>
 <ul class="breadcrumb" style="margin-bottom: 0px;">
     <li><a href="#">Home</a></li>
