--- a/MyLeoRetailer/Views/PostLogin/Master/ProductWarehouse/_Warehouse_Notifiation.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/ProductWarehouse/_Warehouse_Notifiation.cshtml
@@ -1,31 +1,43 @@
-﻿@model MyLeoRetailer.Models.ProductWarehouseViewModel           
+﻿@model MyLeoRetailer.Models.ProductWarehouseViewModel
 
 <form id="frmWarehouseNotification">
-   
-        <div class="panel panel-primary animated zoomIn xn-drop-left xn-panel-dragging ui-draggable">
-            <div class="panel-heading ui-draggable-handle">
-                <h3 class="panel-title"><span class="fa fa-tasks"></span> Notification</h3>
-                <div class="pull-right">
-                    <span class="label label-danger">@Model.List_product_warehouse.Count() new</span>
-                </div>
+
+    <div class="panel panel-primary animated zoomIn xn-drop-left xn-panel-dragging ui-draggable">
+        <div class="panel-heading ui-draggable-handle">
+            <h3 class="panel-title"><span class="fa fa-tasks"></span> Notification</h3>
+            <div class="pull-right">
+                <span class="label label-danger">@Model.List_product_warehouse.Count() new</span>
             </div>
-            <div class="panel-body list-group list-group-contacts scroll mCustomScrollbar _mCS_2 mCS-autoHide mCS_no_scrollbar" style="height:100%;">
-                <div id="mCSB_2" class="mCustomScrollBox mCS-light mCSB_vertical mCSB_inside" tabindex="0">
-                    <div id="mCSB_2_container" class="mCSB_container mCS_y_hidden mCS_no_scrollbar_y" style="position: relative; top: 0px; left: 0px;" dir="ltr">
-                        @foreach (var item in Model.List_product_warehouse)
-                        {
-                            <a class="list-group-item">
-                                <div class="list-group-status status-online"></div>
-                                <span class="contacts-title">@item.Product_SKU</span>
-                                <p>Quantity in Inventory is @item.Product_Quantity</p>
+        </div>
+        <div class="panel-body list-group list-group-contacts scroll mCustomScrollbar _mCS_2 mCS-autoHide mCS_no_scrollbar" style="height:100%;">
+            <div id="mCSB_2" class="mCustomScrollBox mCS-light mCSB_vertical mCSB_inside" tabindex="0">
+                <div id="mCSB_2_container" class="mCSB_container mCS_y_hidden mCS_no_scrollbar_y" style="position: relative; top: 0px; left: 0px;" dir="ltr">
+                    @foreach (var item in Model.List_product_warehouse)
+                    {
+                        <a class="list-group-item">
+                            <div class="list-group-status status-online"></div>
+                            <span class="contacts-title">@item.Product_SKU</span>
+                            <p>Quantity in Inventory is @item.Product_Quantity</p>
                         </a>
-                        }
-                    </div><div id="mCSB_2_scrollbar_vertical" class="mCSB_scrollTools mCSB_2_scrollbar mCS-light mCSB_scrollTools_vertical" style="display: none;"><div class="mCSB_draggerContainer"><div id="mCSB_2_dragger_vertical" class="mCSB_dragger" style="position: absolute; min-height: 30px; top: 0px; display: block; height: 162px; max-height: 190px;" oncontextmenu="return false;"><div class="mCSB_dragger_bar" style="line-height: 30px;"></div></div><div class="mCSB_draggerRail"></div></div></div>
-                </div>
+                    }
+                    @if (Model.List_product_warehouse.Count == 0)
+                    {
+                        <a class="list-group-item">
+                       
+                            <span class="contacts-title">No Notification</span>
+                           
+                        </a>
+                    }
+
+                </div><div id="mCSB_2_scrollbar_vertical" class="mCSB_scrollTools mCSB_2_scrollbar mCS-light mCSB_scrollTools_vertical" style="display: none;"><div class="mCSB_draggerContainer"><div id="mCSB_2_dragger_vertical" class="mCSB_dragger" style="position: absolute; min-height: 30px; top: 0px; display: block; height: 162px; max-height: 190px;" oncontextmenu="return false;"><div class="mCSB_dragger_bar" style="line-height: 30px;"></div></div><div class="mCSB_draggerRail"></div></div></div>
             </div>
+        </div>
+        @if (Model.List_product_warehouse.Count > 0)
+        {
             <div class="panel-footer text-center">
                 <a href="/PurchaseOrderRequest/Search">Create Purchase Order Request</a>
             </div>
-        </div>
-   
+        }
+    </div>
+
 </form>
