--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Index.cshtml
@@ -29,7 +29,7 @@
             <div class="page-title">
                 <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Purhase Order Management</h2>
             </div>
-            <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Search", "PurchaseOrder")'"><i class="fa fa-angle-double-left"></i> BACK</button>
+            <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Search", "PurchaseOrder", new { PurchaseReport_Id = 1 })'"><i class="fa fa-angle-double-left"></i> BACK</button>
         </div>
     </div>
 
