--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/View.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/View.cshtml
@@ -64,7 +64,14 @@
         <div class="page-title">
             <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Purhase Order View</h2>
         </div>
-        <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Search", "PurchaseOrder")'"><i class="fa fa-angle-double-left"></i> BACK</button>
+        @if (Model.PurchaseOrder.PurchaseReport_Id == 1)
+        {
+            <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Search", "PurchaseOrder", new { PurchaseReport_Id = 1 })'"><i class="fa fa-angle-double-left"></i> BACK</button>
+        }
+        else
+        {
+            <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Search", "PurchaseOrder", new { PurchaseReport_Id = 2 })'"><i class="fa fa-angle-double-left"></i> BACK</button>
+        }
     </div>
 
 </div>
