--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
@@ -31,7 +31,7 @@
             <div class="page-title">
                 <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Purchase Return</h2>
             </div>
-            <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Search", "PurchaseReturn")'"><i class="fa fa-angle-double-left"></i> BACK</button>
+            <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Search", "PurchaseReturn", new { PurchaseReport_Id = 1 })'"><i class="fa fa-angle-double-left"></i> BACK</button>     
             </div>
         </div>
 
