--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Search.cshtml
@@ -39,23 +39,23 @@
 
                         @*<div class="col-md-5">
 
-                            <div class="form-group">
-                                <span class="label label-primary label-form" style="margin-bottom: 1px;">Debit Note No.</span>
-                                <input type="text" class="form-control" name="Filter.Debit_Note_No" placeholder="Enter debit note no. to search." />
-                                <input type="hidden" id="hdnPurchaseReturnId" name="Filter.Purchase_Return_Id" value="@Model.Filter.Purchase_Return_Id" />
-                            </div>
+                                <div class="form-group">
+                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Debit Note No.</span>
+                                    <input type="text" class="form-control" name="Filter.Debit_Note_No" placeholder="Enter debit note no. to search." />
+                                    <input type="hidden" id="hdnPurchaseReturnId" name="Filter.Purchase_Return_Id" value="@Model.Filter.Purchase_Return_Id" />
+                                </div>
 
-                        </div>*@
+                            </div>*@
 
                         <div class="col-md-4">
-                            
+
                             <div class="form-group auto-complete">
                                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Debit Note No.</span>
                                 <div class="input-group">
                                     <input type="text" class="form-control invoice-filter autocomplete-text" id="txtDebit_Note_No" placeholder="Enter Debit note no to search" value="" data-table="Purchase_Return" data-col=" Purchase_Return_Id,Debit_Note_No" data-headernames="Purchase Return">
                                     <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
                                     <input type="hidden" id="hdnPurchaseReturnId" name="Filter.Purchase_Return_Id" class="auto-complete-value" />
-                                    <input type="hidden" id="hdnDebitNoteNo" name="Filter.Debit_Note_No" class="auto-complete-label" onchange="Get_Purchase_Returns();" />                                  
+                                    <input type="hidden" id="hdnDebitNoteNo" name="Filter.Debit_Note_No" class="auto-complete-label" onchange="Get_Purchase_Returns();" />
                                 </div>
                             </div>
 
@@ -79,11 +79,19 @@
                         <div class="col-md-4" style="text-align: right; padding-top: 25px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
 
                             <div class="btn-group">
-                                <button role="button" class="btn btn-success active" value="Create" id="btnCreatePurchaseReturn">Create</button>
-                                <button class="btn btn-danger active" disabled value="Edit" id="btnEditPurchaseReturn">View</button>
-                                <button type="button" class="btn btn-info active edit" disabled value="View" id="btnPrintPurchaseReturn">Print</button>
-                                <button role="button" type="button" disabled class="btn btn-warning active" value="Update" id="btnUpdatePurchaseReturn" data-toggle="modal" data-target="#div_Parent_Modal_Fade">Update GR No.</button>
-                                
+                                <input type="hidden" id="hdnPurchaseReturnReport_Id" value="@Model.PurchaseReturn.PurchaseReturnReport_Id" />
+                                @if (@Model.PurchaseReturn.PurchaseReturnReport_Id == 1)
+                                {
+                                    <button role="button" class="btn btn-success active" value="Create" id="btnCreatePurchaseReturn">Create</button>
+                                    <button class="btn btn-danger active" disabled value="Edit" id="btnEditPurchaseReturn">View</button>
+                                    <button type="button" class="btn btn-info active edit" disabled value="View" id="btnPrintPurchaseReturn">Print</button>
+                                    <button role="button" type="button" disabled class="btn btn-warning active" value="Update" id="btnUpdatePurchaseReturn" data-toggle="modal" data-target="#div_Parent_Modal_Fade">Update GR No.</button>
+                                }
+                                else
+                                {
+                                    <button class="btn btn-danger active" disabled value="Edit" id="btnEditPurchaseReturn">View</button>
+                                }
+
                             </div>
 
                         </div>
@@ -92,26 +100,26 @@
 
                     @**@
 
-                  
+
                     @**@
 
                     @*<div class="col-md-8 divUpdateGRNo">
-                        <div class="row">
+                            <div class="row">
 
-                            <div class="col-md-3">
-                                <div class="form-group">
-                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">GR No.</span>
-                                    <input type="text" class="form-control" name="PurchaseReturn.GR_No" id="txtGR_No" placeholder="Enter GR No." />
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <span class="label label-primary label-form" style="margin-bottom: 1px;">GR No.</span>
+                                        <input type="text" class="form-control" name="PurchaseReturn.GR_No" id="txtGR_No" placeholder="Enter GR No." />
+                                    </div>
                                 </div>
+
+                                <div class="col-md-1" style="text-align: right; padding-top: 25px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
+                                    <button type="button" class="btn btn-success active" value="Update" id="btnUpdate">Update</button>
+                                </div>
+
                             </div>
 
-                            <div class="col-md-1" style="text-align: right; padding-top: 25px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
-                                <button type="button" class="btn btn-success active" value="Update" id="btnUpdate">Update</button>
-                            </div>
-
-                        </div>
-                        
-                    </div>*@
+                        </div>*@
 
                 </form>
 
@@ -123,9 +131,9 @@
 
 
         @*<div class="col-md-12" style="padding: 0px;" id="divDynamicTable">*@
-            <div class="col-md-12" id="divDynamicTable" style="background: rgba(0, 0, 0, 0.06); border-top: 1px solid #DDD; padding-top: 0px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0;">
+        <div class="col-md-12" id="divDynamicTable" style="background: rgba(0, 0, 0, 0.06); border-top: 1px solid #DDD; padding-top: 0px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0;">
 
-            </div>
+        </div>
 
         <div class="col-md-12" style="padding: 0px;text-align:center;" id="divPurchaseReturnPager">
 
@@ -136,36 +144,36 @@
 
 
         @*<div class="col-md-12" style="padding: 0px;" id="divTable">
-            <div class="row">
-                <div class="table-responsive" style="width:100%; margin: 0px 0;">
-                    <table class="table table-bordered table-hover" id="tblPurchaseReturn">
-                        <thead>
-                            <tr>
-                                <th></th>
-                                <th>Debit Note No.</th>
-                                <th>GR_No</th>
-                                <th>Vendor</th>
-                                <th>Invoice No.</th>
-                                <th>Quantity</th>
-                                <th>Amount</th>
-                                <th>Transporter</th>
-                                <th>Logistics Person</th>
-                                <th>Lr No.</th>
-                                <th>Return Date</th>
-                            </tr>
-                        </thead>
-                        <tbody></tbody>
-                    </table>
+                <div class="row">
+                    <div class="table-responsive" style="width:100%; margin: 0px 0;">
+                        <table class="table table-bordered table-hover" id="tblPurchaseReturn">
+                            <thead>
+                                <tr>
+                                    <th></th>
+                                    <th>Debit Note No.</th>
+                                    <th>GR_No</th>
+                                    <th>Vendor</th>
+                                    <th>Invoice No.</th>
+                                    <th>Quantity</th>
+                                    <th>Amount</th>
+                                    <th>Transporter</th>
+                                    <th>Logistics Person</th>
+                                    <th>Lr No.</th>
+                                    <th>Return Date</th>
+                                </tr>
+                            </thead>
+                            <tbody></tbody>
+                        </table>
+                </div>
             </div>
-        </div>
-        </div>*@
+            </div>*@
 
         @*<input type="hidden" id="hdfCurrent_Page" name="@Model.Pager.CurrentPage" value="" />
 
-        <div class="col-md-12 pagination" style="padding: 0px;text-align:center;" id="divPurchaseReturnPager">
+            <div class="col-md-12 pagination" style="padding: 0px;text-align:center;" id="divPurchaseReturnPager">
 
 
-        </div>*@
+            </div>*@
 
     </div>
 
