--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/View_Purchase_Return_Details.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/View_Purchase_Return_Details.cshtml
@@ -79,7 +79,14 @@
         <div class="page-title">
             <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Purchase Return View</h2>
         </div>
-        <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Search", "PurchaseReturn")'"><i class="fa fa-angle-double-left"></i> BACK</button>
+        @if (Model.PurchaseReturn.PurchaseReturnReport_Id == 1)
+        {
+            <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Search", "PurchaseReturn", new { PurchaseReport_Id = 1 })'"><i class="fa fa-angle-double-left"></i> BACK</button>
+        }
+        else
+        {
+            <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Search", "PurchaseReturn", new { PurchaseReport_Id = 2 })'"><i class="fa fa-angle-double-left"></i> BACK</button>
+        }
     </div>
 
 </div>
