Change lookup, Controller, ViewModel, Event in Receivables, Purchase Return Request, Purchase Order Request, Sales Invoice, Sales Return. Change Barcode Scanning method in Sales Invoice. Change in Barcode Repo.

--- a/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
@@ -175,8 +175,8 @@
                                         <div id="Branch" class="input-group">
                                             <input type="text" class="form-control invoice-filter autocomplete-text lookup-text" name="SalesInvoice.Branch_Name" id="textSales_Branch_Name_0" placeholder="Enter Branch to search" value="@Model.SalesInvoice.Branch_Name" data-table="Assign_Branches" data-col="Branch_ID,Branch_Name" data-headernames="Branch" data-field="Branch_Id" data-param="hdnBranchIDs">
                                             <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
-                                            <input type="hidden" id="hdnBranchID" value="@Model.SalesInvoice.Branch_Id" name="SalesInvoice.Branch_Id" class="auto-complete-value lookup-text" />
-                                            <input type="hidden" id="hdnBranchName" value="" name="SalesInvoice.Branch_Name" class="auto-complete-label" />
+                                            <input type="hidden" id="hdnBranchID" value="@Model.SalesInvoice.Branch_Id" name="SalesInvoice.Branch_Id" class="auto-complete-value" />
+                                            <input type="hidden" id="hdnBranchName" value="@Model.SalesInvoice.Branch_Name" name="SalesInvoice.Branch_Name" class="auto-complete-label" />
                                         </div>
                                     </div>
                                 </div>
