--- a/MyLeoRetailer/Views/PostLogin/SalesReturn/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesReturn/Index.cshtml
@@ -140,6 +140,8 @@
 
                                 <input type="hidden" class="form-control input-sm" name="SalesReturn.Sales_Return_Id" id="hdf_SalesReturn_Id">
 
+                                <input type="hidden" id="hdnSelecteddBranchId" name="SalesReturn.Selected_Branch_Id" value="@Model.SalesReturn.Branch_Id">
+
                                 @*<div class="col-md-3">
                                         <div class="form-group">
                                             <span class="label label-primary label-form" style="margin-bottom: 1px;">GR No.</span>
@@ -157,32 +159,34 @@
                                         <input type="hidden" id="hdnBranchIDs" value="@Cookies.Branch_Ids" />
                                     }
 
+
                                     <div class="form-group auto-complete">
                                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Branch</span>
-                                        @*<div class="input-group">
-                                                <input type="text" class="form-control invoice-filter autocomplete-text" name="SalesReturn.Branch_Name" id="textSales_Branch_Name" placeholder="Enter Branch to search" value="" data-table="Assign_Branches" data-col="Branch_ID,Branch_Name" data-headernames="Branch" data-field="Branch_Id" data-param="hdnBranchIDs">
-                                                <span class="input-group-addon">
-                                                    <a href="#" class="text-muted" id="hrefDealer" role="button">
-                                                        <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i>
-                                                    </a>
-                                                </span>
-                                                <input type="hidden" id="hdnBranchID" value="@Model.SalesReturn.Branch_Id" name="SalesReturn.Branch_Id" class="auto-complete-value" />
-                                                <input type="hidden" id="hdnBranchName" value="" name="SalesReturn.Branch_Name" class="auto-complete-label" />
-                                            </div>*@
+                                        <div id="Branch" class="input-group">
+                                            <input type="text" class="form-control invoice-filter autocomplete-text lookup-text" name="SalesReturn.Branch_Name" id="textSales_Branch_Name" placeholder="Enter Branch to search" value="@Model.SalesReturn.Branch_Name" data-table="Assign_Branches" data-col="Branch_ID,Branch_Name" data-headernames="Branch" data-field="Branch_Id" data-param="hdnBranchIDs">
+                                            <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                            <input type="hidden" id="hdnBranchID" value="@Model.SalesReturn.Branch_Id" name="SalesReturn.Branch_Id" class="auto-complete-value" />
+                                            <input type="hidden" id="hdnBranchName" value="@Model.SalesReturn.Branch_Name" name="SalesReturn.Branch_Name" class="auto-complete-label" />
+                                        </div>
+                                    </div>
 
+                                    @*<div class="form-group auto-complete">
+                                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Branch</span>
+                                       
                                         <div class="input-group">
-                                            <input type="text" class="form-control invoice-filter autocomplete-text" name="SalesReturn.Branch_Name" id="textSales_Branch_Name" placeholder="Enter Branch to search" value="" data-table="Assign_Branches" data-col="Branch_ID,Branch_Name" data-headernames="Branch" data-field="Branch_Id" data-param="hdnBranchIDs">
+                                            <input type="text" class="form-control invoice-filter autocomplete-text lookup-text" name="SalesReturn.Branch_Name" value="@Model.SalesReturn.Branch_Name" id="textSales_Branch_Name" placeholder="Enter Branch to search" data-table="Assign_Branches" data-col="Branch_ID,Branch_Name" data-headernames="Branch" data-field="Branch_Id" data-param="hdnBranchIDs">
                                             <span class="input-group-addon">
                                                 <a href="#" class="text-muted" id="hrefDealer" role="button">
                                                     <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i>
                                                 </a>
                                             </span>
                                             <input type="hidden" id="hdnBranchID" value="@Model.SalesReturn.Branch_Id" name="SalesReturn.Branch_Id" class="auto-complete-value" />
-                                            <input type="hidden" id="hdnBranchName" value="" name="SalesReturn.Branch_Name" class="auto-complete-label" />
+                                            <input type="hidden" id="hdnBranchName" value="@Model.SalesReturn.Branch_Name" name="SalesReturn.Branch_Name" class="auto-complete-label" />
                                         </div>
 
-                                    </div>
+                                    </div>*@
                                 </div>
+
 
                                 @*<div class="col-md-3">
                                         <div class="form-group">
