--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Index.cshtml
@@ -41,6 +41,8 @@
 
         <form id="frmPurchaseReturnRequest">
 
+            <input type="hidden" id="hdnSelecteddBranchId" value="@Model.PurchaseReturnRequest.Branch_Id">
+
             <div class="box box-default">
 
                 <div class="box-body">
@@ -48,7 +50,7 @@
                     <div class="row">
 
                         <div class="col-md-4" style="background: rgba(0, 0, 0, 0.02); border-bottom: 1px solid #DDD; border-right: 1px solid #DDD; padding: 10px; height: 200px;">
-                            <div class="block">
+                            @*<div class="block">
                                 <h4 style="margin-top: 0px;">Branch Details.</h4>
 
                                 <div class="form-group auto-complete">
@@ -61,6 +63,26 @@
                                     </div>
                                 </div>
 
+                            </div>*@
+
+                            <div class="block" id="divBranch">
+
+                                <h4 style="margin-top: 0px;">Branch details.</h4>
+                                @{
+                                    LoginInfo Cookies = new LoginInfo();
+                                    Cookies = Utility.Get_Login_User("MyLeoLoginInfo", "MyLeoToken", "Branch_Ids");
+
+                                    <input type="hidden" id="hdnBranchIDs" value="@Cookies.Branch_Ids" />
+                                }
+                                <div class="form-group auto-complete">
+                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Branch</span>
+                                    <div id="Branch" class="input-group">
+                                        <input type="text" class="form-control invoice-filter autocomplete-text lookup-text" name="Branch" id="textBrand" placeholder="Enter Branch to search" value="@Model.PurchaseReturnRequest.Branch_Name" data-table="Assign_Branches" data-col="Branch_ID,Branch_Name" data-headernames="Branch" data-field="Branch_Id" data-param="hdnBranchIDs">
+                                        <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                        <input type="hidden" id="hdnBranch_Id" value="@Model.PurchaseReturnRequest.Branch_Id" name="PurchaseReturnRequest.Branch_Id" class="auto-complete-value" />
+                                        <input type="hidden" id="hdnBranch_Name" value="@Model.PurchaseReturnRequest.Branch_Name" name="PurchaseReturnRequest.Branch_Name" class="auto-complete-label" />
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
