--- a/MyLeoRetailer/Views/PostLogin/Master/Receivable/Pay.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Receivable/Pay.cshtml
@@ -65,7 +65,7 @@
                         <div class="form-group auto-complete">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Branch</span>
                             <div id="Branch" class="input-group">
-                                <input type="text" class="form-control invoice-filter autocomplete-text lookup-text" name="Receivable.Branch_Name" id="text_Branch_Name" placeholder="Enter Branch to search" value="@Model.Receivable.Branch_Name" data-table="Assign_Branches" data-col="Branch_ID,Branch_Name" data-headernames="Branch" data-field="Branch_Id" data-param="hdnBranchIDs">
+                                <input type="text" class="form-control invoice-filter autocomplete-text lookup-text" id="text_Branch_Name" placeholder="Enter Branch to search" value="@Model.Receivable.Branch_Name" data-table="Assign_Branches" data-col="Branch_ID,Branch_Name" data-headernames="Branch" data-field="Branch_Id" data-param="hdnBranchIDs">
                                 <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
                                 <input type="hidden" id="hdnBranchID" value="@Model.Receivable.Branch_ID" name="Receivable.Branch_ID" class="auto-complete-value" />
                                 <input type="hidden" id="hdnBranchName" value="@Model.Receivable.Branch_Name" n name="Receivable.Branch_Name" class="auto-complete-label" />
