Changes in Purchase Order Module, Purchase Return Module

--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Search.cshtml
@@ -78,21 +78,23 @@
 
                         <div class="col-md-4" style="text-align: right; padding-top: 25px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
 
-                            <div class="btn-group">
-                                <input type="hidden" id="hdnPurchaseReturnReport_Id" value="@Model.PurchaseReturn.PurchaseReturnReport_Id" />
-                                @if (@Model.PurchaseReturn.PurchaseReturnReport_Id == 1)
-                                {
+                            <input type="hidden" id="hdnPurchaseReturnReport_Id" value="@Model.PurchaseReturn.PurchaseReturnReport_Id" />
+
+                            @if (@Model.PurchaseReturn.PurchaseReturnReport_Id != 2)
+                            {
+                                <div class="btn-group">
                                     <button role="button" class="btn btn-success active" value="Create" id="btnCreatePurchaseReturn">Create</button>
                                     <button class="btn btn-danger active" disabled value="Edit" id="btnEditPurchaseReturn">View</button>
                                     <button type="button" class="btn btn-info active edit" disabled value="View" id="btnPrintPurchaseReturn">Print</button>
                                     <button role="button" type="button" disabled class="btn btn-warning active" value="Update" id="btnUpdatePurchaseReturn" data-toggle="modal" data-target="#div_Parent_Modal_Fade">Update GR No.</button>
-                                }
-                                else
-                                {
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="btn-group">
                                     <button class="btn btn-danger active" disabled value="Edit" id="btnEditPurchaseReturn">View</button>
-                                }
-
-                            </div>
+                                </div>
+                            }
 
                         </div>
 
@@ -130,50 +132,79 @@
 
 
 
-        @*<div class="col-md-12" style="padding: 0px;" id="divDynamicTable">*@
-        <div class="col-md-12" id="divDynamicTable" style="background: rgba(0, 0, 0, 0.06); border-top: 1px solid #DDD; padding-top: 0px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0;">
+        @*<div class="col-md-12" style="padding: 0px;" id="divDynamicTable">*@<div class="col-md-12" style="padding: 0px;" id="divDynamicTable">
+            <div class="col-md-12" id="divDynamicTable" style="background: rgba(0, 0, 0, 0.06); border-top: 1px solid #DDD; padding-top: 0px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0;">
 
-        </div>
+            </div>
 
-        <div class="col-md-12" style="padding: 0px;text-align:center;" id="divPurchaseReturnPager">
-
-
-        </div>
+            <div class="col-md-12" style="padding: 0px;text-align:center;" id="divPurchaseReturnPager">
 
 
+            </div>
 
 
-        @*<div class="col-md-12" style="padding: 0px;" id="divTable">
+
+
+            @*<div class="col-md-12" style="padding: 0px;" id="divTable">
+                    <div class="row">
+                        <div class="table-responsive" style="width:100%; margin: 0px 0;">
+                            <table class="table table-bordered table-hover" id="tblPurchaseReturn">
+                                <thead>
+                                    <tr>
+                                        <th></th>
+                                        <th>Debit Note No.</th>
+                                        <th>GR_No</th>
+                                        <th>Vendor</th>
+                                        <th>Invoice No.</th>
+                                        <th>Quantity</th>
+                                        <th>Amount</th>
+                                        <th>Transporter</th>
+                                        <th>Logistics Person</th>
+                                        <th>Lr No.</th>
+                                        <th>Return Date</th>
+                                    </tr>
+                                </thead>
+                                <tbody></tbody>
+                            </table>
+                    </div>
+                </div>
+                </div>*@<div class="col-md-12" style="padding: 0px;" id="divTable">
                 <div class="row">
                     <div class="table-responsive" style="width:100%; margin: 0px 0;">
                         <table class="table table-bordered table-hover" id="tblPurchaseReturn">
                             <thead>
                                 <tr>
                                     <th></th>
-                                    <th>Debit Note No.</th>
-                                    <th>GR_No</th>
-                                    <th>Vendor</th>
-                                    <th>Invoice No.</th>
-                                    <th>Quantity</th>
-                                    <th>Amount</th>
-                                    <th>Transporter</th>
-                                    <th>Logistics Person</th>
-                                    <th>Lr No.</th>
-                                    <th>Return Date</th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
                                 </tr>
                             </thead>
                             <tbody></tbody>
                         </table>
+                    </div>
                 </div>
             </div>
-            </div>*@
+            @*<input type="hidden" id="hdfCurrent_Page" name="@Model.Pager.CurrentPage" value="" />
 
-        @*<input type="hidden" id="hdfCurrent_Page" name="@Model.Pager.CurrentPage" value="" />
+                <div class="col-md-12 pagination" style="padding: 0px;text-align:center;" id="divPurchaseReturnPager">
+
+
+                </div>*@<input type="hidden" id="hdfCurrent_Page" name="@Model.Pager.CurrentPage" value="" />
 
             <div class="col-md-12 pagination" style="padding: 0px;text-align:center;" id="divPurchaseReturnPager">
 
 
-            </div>*@
+            </div>
+
+        </div>
 
     </div>
 
